# blink-annotator

./: LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
blink_annotator/: __init__.py  annotator.py
blink_annotator/utils/: ear.py  eyeblink_entry.py
models/: README.md
src/blink_annotator/: __init__.py  annotator.py
src/blink_annotator/utils/: ear.py
