[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

# [tool.flit.external-data]
# directory = "models"

[project]
name = "blink-annotator"
description = "Annotate blinks"
authors = [{ name = "Tjaart van der Walt", email = "tjaart@tjaart.org" }]
dynamic = ["version"]

requires-python = ">=3.6"
license = "MIT"

keywords = ["opencv", "blink"]
dependencies = ["dlib", "matplotlib", "numpy", "opencv-contrib-python", "typer"]

[project.scripts]
annotator = "blink_annotator:app"

